<resources>
    <string name="app_name">Aprendendo Android!</string>
    <string name="action_settings">Settings</string>
    <string name="text_msg">Hello World</string>
    <string name="msg_btn_ir">Ir para segunda activity</string>
    <string name="msg_btn_voltar">Voltar para a primeira activity</string>
    <string name="txt_pergunta1">De qual linguagem de programação você gosta?</string>
    <string name="txt_pergunta2">Qual paradigma de programação você utiliza?</string>
    <string name="opcaoLinguagem1">Java</string>
    <string name="opcaoLinguagem2">C++</string>
    <string name="opcaoLinguagem3">C</string>
    <string name="opcaoParadigma1">POO</string>
    <string name="opcaoParadigma2">Procedural</string>
    <string name="textCancelar">Cancelar</string>
    <string name="textOk">OK</string>
    <string name="labelDados">Dados</string>
    <string name="label_nome">Nome</string>
    <string name="label_sobrenome">Sobrenome</string>
    <string name="content_a">Content A</string>
    <string name="content_b">Content B</string>
    <string name="txt_exemplo">Exemplo</string>
    <string name="txt_inverter">Inveter!</string>
    <string name="txt_original">Original</string>
    <string name="str_feijao">Feijão</string>
    <string name="str_550">R$5,50</string>
    <string name="aprenderSpinners">Aprender Spinners</string>
    <string name="aprenderListViewsEmFragments">Aprender ListView em Fragments</string>
    <string name="aprenderDialogs">Aprender Dialogs</string>
    <string name="dialog_simples">Dialog simples</string>
    <string name="dialogo_opcoes">Dialogo opções</string>
    <string name="diaogo_opcoes_radio">diálogo opções radio</string>
    <string name="diaogo_opcoes_checkbox">diálogo de opções múltiplas</string>
    <string name="dialogo_customizado">Diálogo customizado</string>
    <string name="campo_texto_dialogo">Campo do texto do diálogo</string>
    <string name="dialogo_data">Diálogo de data</string>
    <string name="dialogo_hora">Diálogo de hora</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="action_bars_e_menus">Aprender ActionBar e menus</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_call">Chamar</string>
    <string name="up_navigation">up navigation</string>
    <string name="action_mode_1">Action Mode 1</string>
    <string name="play">Play</string>
    <string name="action_mode_2">action mode 2 (lixeira)</string>
    <string name="excluir">Excluir</string>
    <string name="popups">Popups</string>
    <string name="navigation_drawer">NAVIGATION DRAWER</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="titleChose">Escolha um planeta</string>
    <string name="tabs">Tabs</string>
    <string name="intents_1">intents implícitas</string>
    <string name="proximo">Próximo</string>
    <string name="configuracoes">Configurações</string>
    <string name="navegador">Navegador</string>
    <string name="basic">Básica</string>
    <string name="broadcasts_receivers">BroadcastReceivers</string>
    <string name="notificacoes">Notificações</string>
    <string name="mostrar">Mostrar</string>
    <string name="notificacao1">100</string>
    <string name="mostrar_2">Mostrar 2</string>
    <string name="notificacao2">101</string>
    <string name="notification">Notificação</string>
    <string name="ping">Ping</string>
    <string name="dismiss">Cancelar</string>
    <string name="snooze">Dormir</string>
    <string-array name="comidas">
        <item>Feijão</item>
        <item>Arroz</item>
        <item>Batata</item>
        <item>Carne</item>
        <item>Tomate</item>
    </string-array>

    <string-array name="planets">
        <item>Terra</item>
        <item>Saturno</item>
    </string-array>
    <array name="planets_imgs">
        <item>@drawable/terra</item>
        <item>@drawable/saturno</item>
    </array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="iniciar_contagem">Iniciar!</string>
    <string name="zero">0</string>
    <string name="cancelar">Cancelar</string>
    <string name="contador_notification_title">Contador</string>
    <string name="txt_notificacao_contador">O contador irá chegar a 100 rapidamente!</string>
    <string name="msg_notificacao_contador_finalizado">Contador finalizado!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contador_notificacao">Contador com notificação</string>
    <string name="msg_notificacao_contador_iniciado">Contador iniciado!</string>
    <string name="agendar">Agendar</string>
    <string name="Services">Services</string>
    <string name="segundos">Segundos</string>
    <string name="ler_service1">Ler 1° serviço</string>
    <string name="ler_service2">Ler 2° serviço</string>
    <string name="test_google_apis">Testar Google Apis</string>
    <string name="ler_localizacao">Ler localização</string>
    <string name="latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="parar">Parar</string>

</resources>
