<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_simples"
        android:onClick="openSimpleDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_opcoes"
        android:onClick="openOptionsDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diaogo_opcoes_radio"
        android:onClick="openRadioOptionsDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diaogo_opcoes_checkbox"
        android:onClick="openCheckOptionsDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_customizado"
        android:onClick="openCustomDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_data"
        android:onClick="openDateDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_hora"
        android:onClick="openTimeDialog"/>

</LinearLayout>