<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="@dimen/dimenMargem"
    android:paddingBottom="@dimen/dimenMargem"
    android:paddingRight="@dimen/dimenMargem"
    android:paddingLeft="@dimen/dimenMargem">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDados"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:layout_alignBaseline="@+id/edit_nome"
        android:labelFor="@+id/edit_nome"/>
    <EditText
        android:id="@+id/edit_nome"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txt_nome"
        android:layout_alignStart="@+id/edit_sobrenome"
        android:inputType="textCapCharacters"/>

    <TextView
        android:id="@+id/txt_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sobrenome"
        android:layout_alignBaseline="@+id/edit_sobrenome"
        android:labelFor="@+id/edit_sobrenome"/>
    <EditText
        android:id="@+id/edit_sobrenome"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_nome"
        android:layout_toRightOf="@+id/txt_sobrenome"
        android:inputType="textCapCharacters"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOk"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edit_sobrenome"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCancelar"
        android:layout_toStartOf="@+id/btn_ok"
        android:layout_alignTop="@id/btn_ok"/>

</RelativeLayout>