<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar services"
        android:onClick="iniciar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parar service"
        android:onClick="parar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ler_service1"
        android:onClick="lerSegundos"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ler_service2"
        android:onClick="lerSegundos2"/>

    <TextView
        android:id="@+id/txt_seconds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/segundos"
        android:gravity="center"
        style="?android:attr/textAppearanceLarge"/>

</LinearLayout>